--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,6 +1,14 @@
+{% load static %}
 <html>
     <head>
+        <div class="page-header"></div>
         <title>Django Girls blog</title>
+    </div>
+        <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+<!link rel="stylesheet" href="{% static 'css/blog.css' %}">
+<link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
     </head>
     <body>
         <div>
@@ -26,13 +34,22 @@
 <div>
     <h1><a href="/">Django Girls Blog</a></h1>
 </div>
+<div class="content container">
+    <div class="row">
+        <div class="col-md-8">
 
+       
 {% for post in posts %}
-    <div>
+    <div class="post">
+        <div class="date">
         <p>published: {{ post.published_date }}</p>
+        </div>
         <h2><a href="">{{ post.title }}</a></h2>
         <p>{{ post.text|linebreaksbr }}</p>
     </div>
 {% endfor %}
+</div>
+</div>
+</div>
     </body>
 </html>
