--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,55 +1,12 @@
-{% load static %}
-<html>
-    <head>
-        <div class="page-header"></div>
-        <title>Django Girls blog</title>
-    </div>
-        <link rel="stylesheet" href="{% static 'css/blog.css' %}">
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-<!link rel="stylesheet" href="{% static 'css/blog.css' %}">
-<link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
-    </head>
-    <body>
-        <div>
-            <h1><a href="/">Django Girls Blog</a></h1>
-        </div>
-
-        <div>
-            <p>published: 14.06.2014, 12:14</p>
-            <h2><a href="">My first post</a></h2>
-            <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-        </div>
-
-        <div>
-            <p>published: 14.06.2014, 12:14</p>
-            <h2><a href="">My second post</a></h2>
-            <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut f.</p>
-        </div>
-        {{posts}}  <br>
-        {% for post in posts %}
-    {{ post }}
-{% endfor %}  <br>
-
-<div>
-    <h1><a href="/">Django Girls Blog</a></h1>
-</div>
-<div class="content container">
-    <div class="row">
-        <div class="col-md-8">
-
-       
+{% extends 'blog/base.html' %}
+{% block content %}
 {% for post in posts %}
     <div class="post">
         <div class="date">
-        <p>published: {{ post.published_date }}</p>
+            {{ post.published_date }}
         </div>
         <h2><a href="">{{ post.title }}</a></h2>
         <p>{{ post.text|linebreaksbr }}</p>
     </div>
 {% endfor %}
-</div>
-</div>
-</div>
-    </body>
-</html>
+{% endblock %}
